oracle/flaresolverr/flaresolverr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f ./docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: flaresolverr
  name: flaresolverr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flaresolverr
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f ./docker-compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/flaresolverr-default: "true"
        io.kompose.service: flaresolverr
    spec:
      nodeSelector:        
        kubernetes.io/arch: arm64 
      containers:
        - env:
            - name: LOG_HTML
              value: "false"
            - name: LOG_LEVEL
              value: info
          image: ghcr.io/flaresolverr/flaresolverr:latest
          name: flaresolverr
          ports:
            - containerPort: 8191
          resources: {}
      restartPolicy: Always
status: {}
