oracle/flaresolverr/flaresolverr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  namespace: flaresolverr

spec:
  rules:
    - host: flaresolverr.haijin666.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  flaresolverr
                port:
                  number: 8191
